--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "simulate_data.md",
+            "file": "markdown/mean.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "simulate_data.md",
+                "file": "markdown/mean.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,8 @@
   },
   "active": "77c6d723739698da",
   "lastOpenFiles": [
+    "markdown/mean.md",
+    "markdown/simulate_data.md",
     "simulate_data.md",
     "mean.md",
     "simulateData.md",
