--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "markdown/mean.md",
+            "file": "Markdown/simulate_data.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "markdown/mean.md",
+                "file": "Markdown/simulate_data.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +89,8 @@
   },
   "active": "77c6d723739698da",
   "lastOpenFiles": [
+    "Markdown/simulate_data.md",
+    "Markdown/mean.md",
     "markdown/mean.md",
     "markdown/simulate_data.md",
     "simulate_data.md",
@@ -96,7 +98,6 @@
     "simulateData.md",
     "Simulation_of_Data.md",
     "Simulation_of_Data_files/figure-markdown_strict/unnamed-chunk-1-1.png",
-    "Simulation_of_Data_files/figure-markdown_github/unnamed-chunk-1-1.png",
-    "How to simulate data in R.md"
+    "Simulation_of_Data_files/figure-markdown_github/unnamed-chunk-1-1.png"
   ]
 }
